# SlicerModules

./: README.md
Sandbox/MyPythonModule/: MyPythonModule.py
Slicer4Extensions/: CMakeLists.txt
Slicer4Extensions/DrawSplineEffect/: CMakeLists.txt  DrawEffect.py  DrawSplineEffect.py
